finished MVC modules

--- a/ProteinTrackerMVC/ProteinTrackerMVC/Views/Home/Index.cshtml
+++ b/ProteinTrackerMVC/ProteinTrackerMVC/Views/Home/Index.cshtml
@@ -5,11 +5,56 @@
 
 @section scripts {
     <script type="text/javascript">
+
+        var _users;
+
+        $(document).ready(function () {
+            $("#select-user").change(UpdateUserData);
+            PopulateSelectUsers();
+        });
+
         function AddNewUser() {
             var goal = $("#goal").val();
             var name = $("#name").val();
 
-            $.post("api/users", { 'Name': name, "Goal": goal });
+            $.post("api/users", { 'Name': name, "Goal": goal }).done(PopulateSelectUsers);
+        }
+
+        function PopulateSelectUsers() {
+            var selectUser = $('#select-user');
+            selectUser.empty();
+            $.getJSON("api/users", function (data) {
+                _users = data.Users;
+                for (var i = 0; i < _users.length; i++) {
+                    selectUser.append($("<option></option>")
+                        .attr("value", _users[i].Id)
+                        .text(_users[i].Name)
+                        );
+                }
+                UpdateUserData();
+            });
+        }
+
+        function AddProtein() {
+            var amount = $("#amount").val();
+            var userId = $("#select-user").val();
+            $.post("api/users/" + userId, { "Amount": amount }, function (data) {
+                for (var i = 0; i < _users.length; i++) {
+                    if (_users[i].Id == userId) {
+                        _users[i].Total = data.NewTotal;
+                    }
+                }
+                UpdateUserData();
+            }, "json");
+        }
+
+        function UpdateUserData() {
+            var index = $("#select-user")[0].selectedIndex;
+            if (index < 0) {
+                return;
+            }
+            $("#user-goal").text(_users[index].Goal);
+            $("#user-total").text(_users[index].Total);
         }
     </script>
 }
@@ -35,7 +80,7 @@
     <h2>Add Protein</h2>
     <label for="amount">Amount</label>
     <input type="text" id="amount" /><br />
-    <button type="button" id="add-button">Add</button>
+    <button type="button" id="add-button" onclick="AddProtein()">Add</button>
 </div>
 <div>
     <p>Total: <span id="user-total"></span></p>
